// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Lexical - Arrows > Lexical - Arrows (fail) > ([a, a, b]) => {} 1`] = `
"SyntaxError [1:6-1:7]: Duplicate binding 'a'
> 1 | ([a, a, b]) => {}
    |       ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > ([a, a]) => {} 1`] = `
"SyntaxError [1:6-1:7]: Duplicate binding 'a'
> 1 | ([a, a]) => {}
    |       ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > ([a, b, a]) => {} 1`] = `
"SyntaxError [1:9-1:10]: Duplicate binding 'a'
> 1 | ([a, b, a]) => {}
    |          ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > ([a,b,c]) => { const c = x; } 1`] = `
"SyntaxError [1:23-1:24]: Duplicate binding 'c'
> 1 | ([a,b,c]) => { const c = x; }
    |                        ^ Duplicate binding 'c'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > ([a,b,c]) => { const c = x; } 2`] = `
"SyntaxError [1:23-1:24]: Duplicate binding 'c'
> 1 | ([a,b,c]) => { const c = x; }
    |                        ^ Duplicate binding 'c'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > ([a], a, ...b) => {} 1`] = `
"SyntaxError [1:6-1:7]: Duplicate binding 'a'
> 1 | ([a], a, ...b) => {}
    |       ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > ([b, a, a]) => {} 1`] = `
"SyntaxError [1:9-1:10]: Duplicate binding 'a'
> 1 | ([b, a, a]) => {}
    |          ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > ([b, a, b, a]) => {} 1`] = `
"SyntaxError [1:12-1:13]: Duplicate binding 'a'
> 1 | ([b, a, b, a]) => {}
    |             ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > ([b, a], {b}) => {} 1`] = `
"SyntaxError [1:11-1:12]: Duplicate binding 'b'
> 1 | ([b, a], {b}) => {}
    |            ^ Duplicate binding 'b'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > ([b, a], b) => {} 1`] = `
"SyntaxError [1:9-1:10]: Duplicate binding 'b'
> 1 | ([b, a], b) => {}
    |          ^ Duplicate binding 'b'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > ([b, a], b=x) => {} 1`] = `
"SyntaxError [1:9-1:10]: Duplicate binding 'b'
> 1 | ([b, a], b=x) => {}
    |          ^ Duplicate binding 'b'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > (a, a) => {} 1`] = `
"SyntaxError [1:4-1:5]: Duplicate binding 'a'
> 1 | (a, a) => {}
    |     ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > (a, a, b) => {} 1`] = `
"SyntaxError [1:4-1:5]: Duplicate binding 'a'
> 1 | (a, a, b) => {}
    |     ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > (a, b, a) => {} 1`] = `
"SyntaxError [1:7-1:8]: Duplicate binding 'a'
> 1 | (a, b, a) => {}
    |        ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > (async (a = b => { let b; })) 1`] = `
"SyntaxError [1:24-1:25]: Duplicate binding 'b'
> 1 | (async (a = b => { let b; }))
    |                         ^ Duplicate binding 'b'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > (async => { let async; }) 1`] = `
"SyntaxError [1:21-1:22]: Duplicate binding 'async'
> 1 | (async => { let async; })
    |                      ^ Duplicate binding 'async'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > (async await => { let await; }) 1`] = `
"SyntaxError [1:7-1:12]: Await expression not allowed in formal parameter
> 1 | (async await => { let await; })
    |        ^^^^^ Await expression not allowed in formal parameter"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > (async yield => { let yield; }) 1`] = `
"SyntaxError [1:27-1:28]: Duplicate binding 'yield'
> 1 | (async yield => { let yield; })
    |                            ^ Duplicate binding 'yield'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > (b, a, a) => {} 1`] = `
"SyntaxError [1:7-1:8]: Duplicate binding 'a'
> 1 | (b, a, a) => {}
    |        ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > (b, a, b, ...a) => {} 1`] = `
"SyntaxError [1:14-1:15]: Duplicate binding 'a'
> 1 | (b, a, b, ...a) => {}
    |               ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > (b, a, b, a = x) => {} 1`] = `
"SyntaxError [1:10-1:11]: Duplicate binding 'a'
> 1 | (b, a, b, a = x) => {}
    |           ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > (b, a, b, a) => {} 1`] = `
"SyntaxError [1:10-1:11]: Duplicate binding 'a'
> 1 | (b, a, b, a) => {}
    |           ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > (b, a, b, a, [fine]) => {} 1`] = `
"SyntaxError [1:10-1:11]: Duplicate binding 'a'
> 1 | (b, a, b, a, [fine]) => {}
    |           ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > (x) => { const x = y } 1`] = `
"SyntaxError [1:17-1:18]: Duplicate binding 'x'
> 1 | (x) => { const x = y }
    |                  ^ Duplicate binding 'x'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > (x) => { let x } 1`] = `
"SyntaxError [1:15-1:16]: Duplicate binding 'x'
> 1 | (x) => { let x }
    |                ^ Duplicate binding 'x'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > a(async (a, [a]) => { let a; }) 1`] = `
"SyntaxError [1:14-1:15]: Duplicate binding 'a'
> 1 | a(async (a, [a]) => { let a; })
    |               ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > a(async (a, a) => { let a; }) 1`] = `
"SyntaxError [1:12-1:13]: Duplicate binding 'a'
> 1 | a(async (a, a) => { let a; })
    |             ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > a(async a => { let a; }) 1`] = `
"SyntaxError [1:20-1:21]: Duplicate binding 'a'
> 1 | a(async a => { let a; })
    |                     ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async ([a,b,c]) => { const c = x; } 1`] = `
"SyntaxError [1:29-1:30]: Duplicate binding 'c'
> 1 | async ([a,b,c]) => { const c = x; }
    |                              ^ Duplicate binding 'c'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async ([b, a, b, a]) => {} 1`] = `
"SyntaxError [1:18-1:19]: Duplicate binding 'a'
> 1 | async ([b, a, b, a]) => {}
    |                   ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async ([b, a], ...b) => {} 1`] = `
"SyntaxError [1:19-1:20]: Duplicate binding 'b'
> 1 | async ([b, a], ...b) => {}
    |                    ^ Duplicate binding 'b'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async ({"x": x, x: x}) => a 1`] = `
"SyntaxError [1:20-1:21]: Duplicate binding 'x'
> 1 | async ({"x": x, x: x}) => a
    |                     ^ Duplicate binding 'x'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async ({3: x, 4: x}) => a 1`] = `
"SyntaxError [1:18-1:19]: Duplicate binding 'x'
> 1 | async ({3: x, 4: x}) => a
    |                   ^ Duplicate binding 'x'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async ({x: x, x: x}) => a 1`] = `
"SyntaxError [1:18-1:19]: Duplicate binding 'x'
> 1 | async ({x: x, x: x}) => a
    |                   ^ Duplicate binding 'x'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async ({x: y, "x": x = y}) => { let y; } 1`] = `
"SyntaxError [1:37-1:38]: Duplicate binding 'y'
> 1 | async ({x: y, "x": x = y}) => { let y; }
    |                                      ^ Duplicate binding 'y'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async ({x: y, "x": x = y}) => { let y; } 2`] = `
"SyntaxError [1:37-1:38]: Duplicate binding 'y'
> 1 | async ({x: y, "x": x = y}) => { let y; }
    |                                      ^ Duplicate binding 'y'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async (a = b => { let b; }) 1`] = `
"SyntaxError [1:23-1:24]: Duplicate binding 'b'
> 1 | async (a = b => { let b; })
    |                        ^ Duplicate binding 'b'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async (a, a) => {} 1`] = `
"SyntaxError [1:10-1:11]: Duplicate binding 'a'
> 1 | async (a, a) => {}
    |           ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async (b, a, a) => {} 1`] = `
"SyntaxError [1:13-1:14]: Duplicate binding 'a'
> 1 | async (b, a, a) => {}
    |              ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async (b, a, b, a, [fine]) => {} 1`] = `
"SyntaxError [1:16-1:17]: Duplicate binding 'a'
> 1 | async (b, a, b, a, [fine]) => {}
    |                 ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async (x) => { const x = y } 1`] = `
"SyntaxError [1:23-1:24]: Duplicate binding 'x'
> 1 | async (x) => { const x = y }
    |                        ^ Duplicate binding 'x'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async (x) => { let x } 1`] = `
"SyntaxError [1:21-1:22]: Duplicate binding 'x'
> 1 | async (x) => { let x }
    |                      ^ Duplicate binding 'x'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async (ā,食,食) => { /* 𢭃 */ } 1`] = `
"SyntaxError [1:11-1:12]: Duplicate binding '食'
> 1 | async (ā,食,食) => { /* 𢭃 */ }
    |            ^ Duplicate binding '食'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async => { let async; } 1`] = `
"SyntaxError [1:20-1:21]: Duplicate binding 'async'
> 1 | async => { let async; }
    |                     ^ Duplicate binding 'async'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async => { let async; } 2`] = `
"SyntaxError [1:20-1:21]: Duplicate binding 'async'
> 1 | async => { let async; }
    |                     ^ Duplicate binding 'async'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async a => { let a; } 1`] = `
"SyntaxError [1:18-1:19]: Duplicate binding 'a'
> 1 | async a => { let a; }
    |                   ^ Duplicate binding 'a'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async await => { let await; } 1`] = `
"SyntaxError [1:6-1:11]: Await expression not allowed in formal parameter
> 1 | async await => { let await; }
    |       ^^^^^ Await expression not allowed in formal parameter"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async b => { let b; } 1`] = `
"SyntaxError [1:18-1:19]: Duplicate binding 'b'
> 1 | async b => { let b; }
    |                   ^ Duplicate binding 'b'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > async yield => { let yield; } 1`] = `
"SyntaxError [1:26-1:27]: Duplicate binding 'yield'
> 1 | async yield => { let yield; }
    |                           ^ Duplicate binding 'yield'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > x = async => { let async; } 1`] = `
"SyntaxError [1:24-1:25]: Duplicate binding 'async'
> 1 | x = async => { let async; }
    |                         ^ Duplicate binding 'async'"
`;

exports[`Lexical - Arrows > Lexical - Arrows (fail) > x = async yield => { let yield; } 1`] = `
"SyntaxError [1:30-1:31]: Duplicate binding 'yield'
> 1 | x = async yield => { let yield; }
    |                               ^ Duplicate binding 'yield'"
`;
